frontend/test/should_fail/basic_106.grg
using basic_model_002;

rule dummy {
  replace {
    :Node -:AbsE-> :Node;
  }
}
